# grille-crypt-qt

./: .gitmodules  CMakeLists.txt  README.md  actiontypes.h  actionwindow.cpp  actionwindow.h  encryptwindow.cpp  encryptwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  primarywindow.cpp  primarywindow.h
.github/workflows/: arch_build.yaml  cppcheck.yaml
